[package]
name = "basic-http-server"
version = "0.8.1"
authors = ["Brian Anderson <andersrb@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A simple static HTTP file server, for learning and local development"
homepage = "https://github.com/brson/basic-http-server"
repository = "https://github.com/brson/basic-http-server"
readme = "README.md"
edition = "2018"

[dependencies]
bytes = "0.4.12"
clap = "2.33.0"
comrak = "0.6.2"
derive_more = "0.15.0"
env_logger = "0.6.2"
futures = "0.3.28"
handlebars = "1.1.0"
http = "0.1.19"
hyper = { version = "0.14.26", features = ["http1", "stream", "server", "tcp"] }
log = "0.4.8"
mime = "0.3.14"
mime_guess = "2.0.1"
percent-encoding = "2.1.0"
serde = { version = "1.0.102", features = ["derive"] }
tokio = {version = "1.28.0", features = ["rt", "rt-multi-thread", "fs"] }
tokio-util = { version="0.7.8", features = ["codec"] }
tokio-fs = "0.2.0-alpha.6"
structopt = "0.2.18"
